main/bin/main.47612.temp/main.log
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:75:6: warning: scoped enumerations are a C++11 extension
enum struct Severity {
     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:202:28: error: use of undeclared identifier 's3'
                double s = s3 * houseSusc;
                           ^
1 warning and 1 error generated.
